tests/NormalTests/paczka1/fuzzy1/17474652.err
Error in line 5: 4dZaKiOl3s A59 7,7
Error in line 16: GWPHZTm S941 7,9
Error in line 23: GWPHZTm A59 23,6
Error in line 17: CmAs S941 88,1
Error in line 28: CmAs S885 54,3
Error in line 34: S885 A157 16,90
Error in line 30: CmAs A59 93,3
